--- a/StudyQuizApp/Views/MainWindow.xaml
+++ b/StudyQuizApp/Views/MainWindow.xaml
@@ -1,12 +1,106 @@
-﻿<Window x:Class="StudyQuizApp.Views.MainWindow"
+﻿<Window x:Name="mainWindow" x:Class="StudyQuizApp.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudyQuizApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="StudyQuizApp" Height="500" Width="800">
 
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <!-- Menu bar -->
+            <RowDefinition Height="*"/>
+            <!-- Main layout -->
+        </Grid.RowDefinitions>
+
+        <!-- Menu -->
+        <Menu Grid.Row="0">
+            <MenuItem Header="_File">
+                <MenuItem Header="New" />
+                <MenuItem Header="Open" />
+                <Separator />
+                <MenuItem Header="Exit"/>
+            </MenuItem>
+
+            <MenuItem Header="_Help">
+                <MenuItem Header="About"/>
+            </MenuItem>
+        </Menu>
+        
+        <Grid x:Name="MainGrid" Grid.Row="1">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="50*"/>
+        </Grid.ColumnDefinitions>
+
+        <!-- Left Column -->
+        <Grid x:Name="LeftStack" Margin="10" Grid.ColumnSpan="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <!-- Top buttons -->
+                <RowDefinition Height="Auto"/>
+                <!-- Label -->
+                <RowDefinition Height="*"/>
+                <!-- ListBox (fills space) -->
+                <RowDefinition Height="Auto"/>
+                <!-- Bottom buttons -->
+            </Grid.RowDefinitions>
+
+            <!-- Top Buttons -->
+            <Grid x:Name="LeftTopGrid" Height="70">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Label Grid.Column="0" Content="Add question:" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+                <Button x:Name="addMultipleChoiceQBtn" Content="Multiple Choice" Margin="10" Grid.Column="1"/>
+                <Button x:Name="addQualitativeQBtn" Grid.Column="2" Content="Qualitative (Q&amp;A)" Margin="10"/>
+            </Grid>
+
+            <Label Grid.Row="1" x:Name="ListLabel" Content="Questions:"/>
+
+            <ListBox Grid.Row="2"
+             x:Name="questionsListBox"
+             Margin="0,5"
+             ScrollViewer.CanContentScroll="True"
+             VerticalAlignment="Stretch"/>
+
+            <!-- Bottom Buttons -->
+            <Grid Grid.Row="3" Height="50">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Button x:Name="editQBtn" Grid.Column="0" Content="Edit" Margin="10"/>
+                <Button x:Name="deleteQBtn" Grid.Column="1" Content="Delete" Margin="10"/>
+                <Button x:Name="clearSelectionBtn" Grid.Column="2" Content="Clear" Margin="10"/>
+            </Grid>
+        </Grid>
+
+        <!-- Right Column -->
+        <Grid Grid.Column="1" Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="70"/>
+                <!-- For the button -->
+                <RowDefinition Height="*"/>
+                <!-- For the TextBox, fills remaining space -->
+            </Grid.RowDefinitions>
+
+            <Button Grid.Row="0" Content="Run Quiz" Margin="10"/>
+
+            <TextBox Grid.Row="1"
+             x:Name="DisplayArea"
+             Text="Select a question to view its details..."
+             TextWrapping="Wrap"
+             VerticalScrollBarVisibility="Auto"
+             AcceptsReturn="True"
+             IsReadOnly="True"
+             Margin="0,10,0,0"/>
+        </Grid>
+    </Grid>
     </Grid>
 </Window>
