--- a/StudyQuizApp/Views/MainWindow.xaml
+++ b/StudyQuizApp/Views/MainWindow.xaml
@@ -56,7 +56,7 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <Label Grid.Column="0" Content="Add question:" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-                <Button x:Name="addMultipleChoiceQBtn" Content="Multiple Choice" Margin="10" Grid.Column="1"/>
+                    <Button x:Name="addMultipleChoiceQBtn" Content="Multiple Choice" Margin="10" Grid.Column="1" Click="AddMultipleChoiceQ_Click"/>
                 <Button x:Name="addQualitativeQBtn" Grid.Column="2" Content="Qualitative (Q&amp;A)" Margin="10" Click="AddQualitativeQ_Click"/>
             </Grid>
 
