--- a/StudyQuizApp/Views/QuestionWindow.xaml
+++ b/StudyQuizApp/Views/QuestionWindow.xaml
@@ -41,7 +41,7 @@
         <!-- Row 3: Buttons -->
         <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Content="Cancel" Width="80" Margin="0,0,10,0" Height="30"/>
-            <Button Content="Save" Width="80"/>
+            <Button x:Name="saveBtn" Content="Save" Width="80" Click="saveBtn_Click"/>
         </StackPanel>
     </Grid>
 
