feat: Show updated version of question after successful edit

--- a/StudyQuizApp/Views/MainWindow.xaml
+++ b/StudyQuizApp/Views/MainWindow.xaml
@@ -83,7 +83,7 @@
                         Grid.Column="0"
                         Content="Edit"
                         Margin="10"
-                        Click="editQBtn_Click"
+                        Command="{Binding EditQuestionCommand}"
                         IsEnabled="{Binding CanEditOrDelete}"/>
                 <Button x:Name="deleteQBtn"
                         Grid.Column="1"
