--- a/StudyQuizApp/Views/MainWindow.xaml
+++ b/StudyQuizApp/Views/MainWindow.xaml
@@ -113,7 +113,8 @@
                     Grid.Row="0"
                     Content="Run Quiz"
                     Margin="10"
-                    IsEnabled="{Binding CanRunQuiz}"/>
+                    IsEnabled="{Binding CanRunQuiz}"
+                    Command="{Binding RunQuizCommand}"/>
 
                 <ContentControl Grid.Row="1"
                 x:Name="displayArea"
