--- a/StudyQuizApp/Views/QuizWindow.xaml
+++ b/StudyQuizApp/Views/QuizWindow.xaml
@@ -3,66 +3,136 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:StudyQuizApp.Views"
+        xmlns:viewmodels="clr-namespace:StudyQuizApp.ViewModels"
+        xmlns:converters="clr-namespace:StudyQuizApp.Converters"
         mc:Ignorable="d"
+        d:DataContext="{d:DesignInstance Type=viewmodels:QuizViewModel}"
         Title="QuizWindow" Height="450" Width="800">
+
+    <Window.Resources>
+        <converters:BoolToBrushConverter x:Key="BoolToBrushConverter"/>
+        <converters:CorrectnessMessageConverter x:Key="CorrectnessMessageConverter"/>
+        <converters:NextOrFinishTextConverter x:Key="NextOrFinishTextConverter"/>
+        <BooleanToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+        <!-- Add your other converters here as needed -->
+    </Window.Resources>
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="170"/>
-            <!-- Stats Panel -->
             <ColumnDefinition Width="*"/>
-            <!-- Quiz Content Panel -->
         </Grid.ColumnDefinitions>
 
         <!-- Left: Stats and Controls -->
-        <Border Grid.Column="0"
-        Background="#EEE"
-        Padding="10">
-
+        <Border Grid.Column="0" Background="#EEE" Padding="10">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <!-- Stats take all available space -->
-                    <RowDefinition Height="Auto" />
-                    <!-- Cancel button at the bottom -->
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <!-- Top: Stats section -->
+                <!-- Stats -->
                 <StackPanel Grid.Row="0">
-                    <TextBlock
-                        Text="Q.X (out of Z)"
-                        FontWeight="Bold"
-                        FontSize="16"
-                        Margin="0 0 0 20"/>
-                    <TextBlock
-                        Text="Current score:"
-                        FontSize="14"
-                        FontWeight="Bold"
-                        Margin="0 0 0 5"/>
-                    <TextBlock
-                        Text="A correct (out of B)"
-                        FontSize="14"
-                        Margin="0 0 0 5"/>
-                    <TextBlock
-                        Text="X%"
-                        FontSize="14"/>
+                    <TextBlock FontWeight="Bold" FontSize="16" Margin="0 0 0 20">
+                        <TextBlock.Text>
+                            <MultiBinding StringFormat="Q.{0} (out of {1})">
+                                <Binding Path="CurrentQuestionNumber"/>
+                                <Binding Path="TotalQuestions"/>
+                            </MultiBinding>
+                        </TextBlock.Text>
+                    </TextBlock>
+                    <TextBlock Text="Current score:" FontWeight="Bold" FontSize="14" Margin="0 0 0 5"/>
+                    <TextBlock FontSize="14" Margin="0 0 0 5">
+                        <TextBlock.Text>
+                            <MultiBinding StringFormat="{}{0} correct (out of {1})">
+                                <Binding Path="CorrectCount"/>
+                                <Binding Path="TotalQuestions"/>
+                            </MultiBinding>
+                        </TextBlock.Text>
+                    </TextBlock>
+                    <TextBlock Text="{Binding Percent, StringFormat={}{0:F0}%}" FontSize="14"/>
                 </StackPanel>
 
-                <!-- Bottom: Cancel button -->
+                <!-- Cancel button -->
                 <Button Grid.Row="1"
-                Content="Cancel Quiz"
-                HorizontalAlignment="Stretch"
-                Background="DarkRed"
-                Foreground="White"
-                Padding="10"
-                FontSize="13"
-                Margin="0 20 0 0"/>
+                        Content="Cancel Quiz"
+                        HorizontalAlignment="Stretch"
+                        Background="DarkRed"
+                        Foreground="White"
+                        Padding="10"
+                        FontSize="13"
+                        Margin="0 20 0 0"/>
             </Grid>
         </Border>
 
-        <!-- Right: Dynamic Quiz Content -->
+        <!-- Right: Dynamic Quiz UI -->
         <Border Grid.Column="1" Padding="20">
-            <!--<ContentControl Content="{Binding QuizContent}"/>-->
+            <StackPanel>
+
+                <!-- Question text -->
+                <TextBlock Text="{Binding CurrentQuestion.QuestionText}" 
+                           FontWeight="Bold" 
+                           FontSize="16" 
+                           Margin="0 0 0 10"/>
+
+                <!-- Multiple Choice UI -->
+                <StackPanel Visibility="{Binding IsMultipleChoice, Converter={StaticResource BoolToVisibilityConverter}}">
+                    <ItemsControl ItemsSource="{Binding CurrentQuestion.Options}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <RadioButton Content="{Binding}" 
+                                     Tag="{Binding}"
+                                     GroupName="Choices"
+                                     Checked="RadioButton_Checked"/>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </StackPanel>
+
+
+                <!-- QUALITATIVE UI -->
+                <TextBlock Text="Think of your answer, then click Reveal." 
+                           FontStyle="Italic" 
+                           Margin="0 10 0 0"
+                           Visibility="{Binding IsQualitative, Converter={StaticResource BoolToVisibilityConverter}}"/>
+
+                <!-- Reveal button (shown in question phase) -->
+                <Button Content="Reveal Answer"
+                        Command="{Binding RevealAnswerCommand}"
+                        Margin="0 20 0 0"
+                        HorizontalAlignment="Right"
+                        Visibility="{Binding IsShowingQuestion, Converter={StaticResource BoolToVisibilityConverter}}"/>
+
+                <!-- ANSWER SECTION (shown when revealing) -->
+                <StackPanel Visibility="{Binding IsRevealingAnswer, Converter={StaticResource BoolToVisibilityConverter}}" Margin="0 20 0 0">
+
+                    <!-- Correct answer text (for both question types) -->
+                    <TextBlock Text="{Binding CorrectAnswerText}" FontWeight="Bold" />
+
+                    <!-- Correctness message -->
+                    <TextBlock Margin="10 10 0 0" FontWeight="Bold" 
+                               Foreground="{Binding IsCorrect, Converter={StaticResource BoolToBrushConverter}}"
+                               Visibility="{Binding IsMultipleChoice, Converter={StaticResource BoolToVisibilityConverter}}">
+                        <TextBlock.Text>
+                            <MultiBinding Converter="{StaticResource CorrectnessMessageConverter}">
+                                <Binding Path="IsCorrect"/>
+                                <Binding Path="SelectedOption"/>
+                            </MultiBinding>
+                        </TextBlock.Text>
+                    </TextBlock>
+
+                    <!-- Qualitative: I got it right checkbox -->
+                    <CheckBox Content="I got it right"
+                              IsChecked="{Binding IsCorrect}" 
+                              Visibility="{Binding IsQualitative, Converter={StaticResource BoolToVisibilityConverter}}"/>
+
+                    <!-- Continue Button -->
+                    <Button Content="{Binding IsLastQuestion, Converter={StaticResource NextOrFinishTextConverter}}"
+                            Command="{Binding RegisterAnswerCommand}"
+                            HorizontalAlignment="Right"
+                            Margin="0 10 0 0"/>
+                </StackPanel>
+            </StackPanel>
         </Border>
     </Grid>
 </Window>
