--- a/StudyQuizApp/Views/QuizWindow.xaml
+++ b/StudyQuizApp/Views/QuizWindow.xaml
@@ -14,6 +14,7 @@
         <converters:CorrectnessMessageConverter x:Key="CorrectnessMessageConverter"/>
         <converters:NextOrFinishTextConverter x:Key="NextOrFinishTextConverter"/>
         <BooleanToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+        <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
         <!-- Add your other converters here as needed -->
     </Window.Resources>
 
@@ -68,14 +69,16 @@
         <!-- Right: Dynamic Quiz UI -->
         <Border Grid.Column="1" Padding="20">
             <StackPanel>
+            <!-- Question phase -->
+            <StackPanel Visibility="{Binding CurrentQuestion, Converter={StaticResource NullToVisibilityConverter}}">
 
-                <!-- Question text -->
+                <!-- Question text: Show when IsShowingQuestion AND when IsRevealingAnswer but not when QuizFinished -->
                 <TextBlock Text="{Binding CurrentQuestion.QuestionText}" 
                            FontWeight="Bold" 
                            FontSize="16" 
                            Margin="0 0 0 10"/>
 
-                <!-- Multiple Choice UI -->
+                <!-- Multiple Choice UI for when IsShowingQuestion -->
                 <StackPanel Visibility="{Binding IsMultipleChoice, Converter={StaticResource BoolToVisibilityConverter}}">
                     <ItemsControl ItemsSource="{Binding CurrentQuestion.Options}">
                         <ItemsControl.ItemTemplate>
@@ -90,13 +93,13 @@
                 </StackPanel>
 
 
-                <!-- QUALITATIVE UI -->
+                <!-- QUALITATIVE UI for when IsShowingQuestion -->
                 <TextBlock Text="Think of your answer, then click Reveal." 
                            FontStyle="Italic" 
                            Margin="0 10 0 0"
                            Visibility="{Binding IsQualitative, Converter={StaticResource BoolToVisibilityConverter}}"/>
 
-                <!-- Reveal button (shown in question phase) -->
+                <!-- Reveal button (shown when IsShowingQuestion) -->
                 <Button Content="Reveal Answer"
                         Command="{Binding RevealAnswerCommand}"
                         Margin="0 20 0 0"
@@ -132,6 +135,11 @@
                             HorizontalAlignment="Right"
                             Margin="0 10 0 0"/>
                 </StackPanel>
+            </StackPanel>
+            
+            <StackPanel Visibility="{Binding IsQuizFinished, Converter={StaticResource BoolToVisibilityConverter}}">
+                <TextBlock>Quiz is finished</TextBlock>
+            </StackPanel>
             </StackPanel>
         </Border>
     </Grid>
