--- a/StudyQuizApp/Views/QuizWindow.xaml
+++ b/StudyQuizApp/Views/QuizWindow.xaml
@@ -164,10 +164,39 @@
                             Margin="0 10 0 0"/>
                 </StackPanel>
             </StackPanel>
-            
-            <StackPanel Visibility="{Binding IsQuizFinished, Converter={StaticResource BoolToVisibilityConverter}}">
-                <TextBlock>Quiz is finished</TextBlock>
-            </StackPanel>
+
+                <StackPanel Visibility="{Binding IsQuizFinished, Converter={StaticResource BoolToVisibilityConverter}}" Margin="0 10 0 0">
+                    <TextBlock Text="Quiz is finished." FontWeight="Bold" FontSize="14" Margin="0 0 0 10"/>
+
+                    <!-- Success message -->
+                    <TextBlock
+                        Text="You got all questions right - congrats!" 
+                        Foreground="Green"
+                        FontSize="13"
+                        Margin="0 0 0 5"
+                        Visibility="{Binding HasPerfectScore, Converter={StaticResource BoolToVisibilityConverter}}"/>
+
+                    <!-- Retry message -->
+                    <TextBlock 
+                        Foreground="DarkRed"
+                        FontSize="13"
+                        Margin="0 0 0 10"
+                        Visibility="{Binding HasMistakes, Converter={StaticResource BoolToVisibilityConverter}}">
+                        <TextBlock.Text>
+                            <Binding Path="IncorrectCount" StringFormat="You got {0} question(s) wrong. Click re-try to practice these questions."/>
+                        </TextBlock.Text>
+                    </TextBlock>
+
+                    <!-- Action buttons -->
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0 10 0 0">
+                        <Button Content="Finish" Padding="10 5" Margin="0 0 10 0"/>
+                        <Button
+                            Content="Start re-run"
+                            Padding="10 5"
+                            Visibility="{Binding HasMistakes, Converter={StaticResource BoolToVisibilityConverter}}"/>
+                    </StackPanel>
+                </StackPanel>
+                
             </StackPanel>
         </Border>
     </Grid>
