--- a/StudyQuizApp/Views/QuizWindow.xaml
+++ b/StudyQuizApp/Views/QuizWindow.xaml
@@ -90,7 +90,8 @@
                         Foreground="White"
                         Padding="10"
                         FontSize="13"
-                        Margin="0 20 0 0"/>
+                        Margin="0 20 0 0"
+                        Click="CancelButton_Click"/>
             </Grid>
         </Border>
 
@@ -189,10 +190,15 @@
 
                     <!-- Action buttons -->
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0 10 0 0">
-                        <Button Content="Finish" Padding="10 5" Margin="0 0 10 0"/>
+                        <Button
+                            Content="Finish"
+                            Padding="10 5"
+                            Margin="0 0 10 0"
+                            Click="FinishButton_Click"/>
                         <Button
                             Content="Start re-run"
                             Padding="10 5"
+                            Command="{Binding StartReRunCommand}"
                             Visibility="{Binding HasMistakes, Converter={StaticResource BoolToVisibilityConverter}}"/>
                     </StackPanel>
                 </StackPanel>
